--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 		<!-- header -->
 		<header class="main-header">
 			<!-- header-title -->
-			<div class="header-title d-none d-sm-block">
+			<div class="header-title">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
 							<div class="header-title-child-parent">
 								<a class="mobile-tag" href="tel:1 (855) 444-4911"><img src="img/mob.png"> 1 (855) 444-4911</a>
-								<a href="#">24 HOUR SUPPORT <img class="support-img" src="img/support.png"></a>
+								<a href="tel:1 (855) 444-4911" class="d-none d-sm-block">24 HOUR SUPPORT <img class="support-img" src="img/support.png"></a>
 							</div>
 						</div>
 					</div>
@@ -38,7 +38,7 @@
 			<div class="header-navbar">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-5">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-5 logo-div">
 							<div class="logo-main">
 								<img src="img/top-logo.png">
 							</div>
@@ -54,7 +54,6 @@
 							</div>
 						</div>
 						<div class="col-lg-7 col-md-7 col-7 mobilendlaunguage">
-							<a href="tel:(855)555-5555">(855)555-5555</a>
 							 <select class="form-select" id="sel1" name="sellist1">
 					      <option>SP</option>
 					      <option>EN</option>
@@ -133,16 +132,16 @@
 							  </div>
 							  <div class="carousel-inner">
 							    <div class="carousel-item active">
-							       <p>“The service was above my expectations. Me Levy-Soussan defended my case and I was a acquitted. His experience, expertise and dedication made a critical difference on my case. I highly recommend him and the firm. Thank you Bernard!”</p>
-								    <h5>- Amanda biron</h5>
+							       <p>“I had just gotten released from my arrest and I was totally panicked regarding my future.  Thank god I was fortunate enough to land on the DuiGuys for help.  The support I received completely changed my headspace.  Their thorough attention to detail as well as extensive knowledge on how to handle my file changed my outcome and my life!  Thank you so much for all that you did for me.  Highly recommend this group!”</p>
+								    <h5>- Steven Reynolds</h5>
 							    </div>
 							    <div class="carousel-item">
-							       <p>“The service was above my expectations. Me Levy-Soussan defended my case and I was a acquitted. His experience, expertise and dedication made a critical difference on my case. I highly recommend him and the firm. Thank you Bernard!”</p>
-								   <h5>- Amanda biron</h5>
+							       <p>“The service was above my expectations. I really didnt expect such an incredible outcome.  My case was actually acquitted.  The team experience, expertise and dedication made a critical difference towards the outcome of my case. I highly recommend this firm!”</p>
+								   <h5>- Emily Johnson</h5>
 							    </div>
 							    <div class="carousel-item">
-							      <p>“The service was above my expectations. Me Levy-Soussan defended my case and I was a acquitted. His experience, expertise and dedication made a critical difference on my case. I highly recommend him and the firm. Thank you Bernard!”</p>
-								  <h5>- Amanda biron</h5>
+							      <p>“I had a great experience with this law firm. They provided excellent support throughout my case, keeping me well-informed and prepared for every step. Their professionalism and expertise made a real difference and I truly appreciated the help in achieving a successful outcome. Highly recommended!”</p>
+								  <h5>- Amir Fahoud</h5>
 							    </div>
 							  </div>
 							 <!--  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -511,15 +510,18 @@
 		
 	
 <!-- sticky-menu -->
-		<section class="sticky-menu-design">
-			<div class="sticky-menu-tags">
-				<a href="tel:+18444409111"><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
-				<a  href="#contact-form"><img src="img/free-quote.png"> Free Consultation</a>
-			</div>
-		</section>
-		<!-- sticky-menu -->
+<!-- <section class="sticky-menu-design">
+	<div class="sticky-menu-tags">
+		<a href="tel:+18444409111"><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
+		<a  href="#contact-form"><img src="img/free-quote.png"> Free Consultation</a>
+	</div>
+</section>
+ --><!-- sticky-menu -->
 
-
+<div class="mobile-sticky-footer">
+  <a href="tel:+14507008011" class="sticky-button"><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
+  <a href="/pages/contact" class="sticky-button">Free Consultation</a>
+</div>
 
 
 
