--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
 <div class="mobile-sticky-footer">
   <a href="tel:+14507008011" class="sticky-button"><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
-  <a href="/pages/contact" class="sticky-button">Free Consultation</a>
+  <a href="#contact-form" class="sticky-button">Free Consultation</a>
 </div>
 
 
