--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="col-lg-12 col-md-12 col-sm-12">
 							<div class="header-title-child-parent">
 								<a class="mobile-tag" href="tel:1 (855) 444-4911"><img src="img/mob.png"> 1 (855) 444-4911</a>
-								<a href="tel:1 (855) 444-4911" class="">24 HOUR SUPPORT <img class="support-img" src="img/support.png"></a>
+								<a href="tel:1 (855) 444-4911" class="">24 HOUR SUPPORT</a>
 							</div>
 						</div>
 					</div>
