--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
 							<div class="header-title-child-parent">
-								<a class="mobile-tag" href="tel:1 (855) 444-4911"><img src="img/mob.png"> 1 (855) 444-4911</a>
-								<a href="tel:1 (855) 444-4911" class="">24 HOUR SUPPORT</a>
+								<a class="mobile-tag" href="tel:18634749310"><img src="img/mob.png"> 1 (863) 474-9310</a>
+								<a href="tel:18634749310" class="">24 HOUR SUPPORT</a>
 							</div>
 						</div>
 					</div>
@@ -239,7 +239,7 @@
 							 		<textarea required name="comments" class="form-control" id="exampleFormControlTextarea1" placeholder="Tell us about your case" rows="4"></textarea>
 							 	</div>
 							</div>
-							<button class="btn btn-secondary contact-form-button">Send form</button>
+							<button class="btn btn-secondary contact-form-button">Submit</button>
 						</form>
 					</div>
 				</div>
@@ -334,7 +334,7 @@
 	    		<div class="row">
 	    			<div class="col-lg-6 col-md-12 col-sm-12">
 			    		<div class="truck-and-vehicle-content">
-			    			<h2>Charged with a DUI?<br> Your first call should be Ticket911</h2>
+			    			<h2>Charged with a DUI?<br> Your first call should be DUIGUYSFLA</h2>
 			    			<ul>
 			    				<li><img src="img/tick.png"> Case Evaluations are FREE and you are under no obligation to hire the firm.</li>
 			    				<li><img src="img/tick.png"> Vigorously defend you, and will not back down.</li>
@@ -512,14 +512,14 @@
 <!-- sticky-menu -->
 <!-- <section class="sticky-menu-design">
 	<div class="sticky-menu-tags">
-		<a href="tel:+18444409111"><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
+		<a href=""><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
 		<a  href="#contact-form"><img src="img/free-quote.png"> Free Consultation</a>
 	</div>
 </section>
  --><!-- sticky-menu -->
 
 <div class="mobile-sticky-footer">
-  <a href="tel:+14507008011" class="sticky-button"><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
+  <a href="tel:+18634749310" class="sticky-button"><img class="newmob-img" src="img/free-call.png"> Call 24/7</a>
   <a href="#contact-form" class="sticky-button">Free Consultation</a>
 </div>
 
