--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="circle-logo-deisgn">
-							<img src="img/circlelogo.png">
+							<!-- <img src="img/circlelogo.png"> -->
 						</div>
 					</div>
 				</div>
@@ -184,7 +184,8 @@
 					</div>
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="twopartners-img">
-							<img src="img/twopartners.png">
+							<!-- <img src="img/twopartners.png"> -->
+							<img src="img/circlelogo.png">
 						</div>
 					</div>
 				</div>
@@ -216,7 +217,7 @@
 							</div>
 							<div class="row mb-4">
 							    <div class="col-lg-12 col-md-12 col-sm-12">
-							      <input required name="phone" type="email" class="form-control" id="inputEmail3" placeholder="Phone">
+							      <input required name="phone" type="text" class="form-control" id="inputEmail3" placeholder="Phone">
 							    </div>
 							 </div>
 							<div class="row mb-4">
@@ -226,12 +227,12 @@
 							 </div>
 							 <div class="row mb-4">
 							 	<div class="col-lg-12 col-md-12 col-sm-12">
-							 		<input name="county" id="id_phone_number" class="form-control" placeholder="County" type="tel">
+							 		<input name="county" type="text" class="form-control" placeholder="County" type="tel">
 							 	</div>
 							 </div>
 							 <div class="row mb-4">
 							 	<div class="col-lg-12 col-md-12 col-sm-12">
-							 		<input name="type" id="id_phone_number" class="form-control" placeholder="DUI (Driving) or BUI (Boating)" type="tel">
+							 		<input name="type" type="text" class="form-control" placeholder="DUI (Driving) or BUI (Boating)" type="tel">
 							 	</div>
 							 </div>
 							 <div class="row mb-4">
@@ -279,16 +280,16 @@
 							  </div>
 							  <div class="carousel-inner">
 							    <div class="carousel-item active">
-							       <p>“The service was above my expectations. Me Levy-Soussan defended my case and I was a acquitted. His experience, expertise and dedication made a critical difference on my case. I highly recommend him and the firm. Thank you Bernard!”</p>
-								    <h5>- Amanda biron</h5>
+							       <p>“I had just gotten released from my arrest and I was totally panicked regarding my future.  Thank god I was fortunate enough to land on the DuiGuys for help.  The support I received completely changed my headspace.  Their thorough attention to detail as well as extensive knowledge on how to handle my file changed my outcome and my life!  Thank you so much for all that you did for me.  Highly recommend this group!”</p>
+								    <h5>- Steven Reynolds</h5>
 							    </div>
 							    <div class="carousel-item">
-							       <p>“The service was above my expectations. Me Levy-Soussan defended my case and I was a acquitted. His experience, expertise and dedication made a critical difference on my case. I highly recommend him and the firm. Thank you Bernard!”</p>
-								   <h5>- Amanda biron</h5>
+							       <p>“The service was above my expectations. I really didnt expect such an incredible outcome.  My case was actually acquitted.  The team experience, expertise and dedication made a critical difference towards the outcome of my case. I highly recommend this firm!”</p>
+								   <h5>- Emily Johnson</h5>
 							    </div>
 							    <div class="carousel-item">
-							      <p>“The service was above my expectations. Me Levy-Soussan defended my case and I was a acquitted. His experience, expertise and dedication made a critical difference on my case. I highly recommend him and the firm. Thank you Bernard!”</p>
-								  <h5>- Amanda biron</h5>
+							      <p>“I had a great experience with this law firm. They provided excellent support throughout my case, keeping me well-informed and prepared for every step. Their professionalism and expertise made a real difference and I truly appreciated the help in achieving a successful outcome. Highly recommended!”</p>
+								  <h5>- Amir Fahoud</h5>
 							    </div>
 							  </div>
 							 <!--  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -314,7 +315,7 @@
 	     			<div class="col-lg-12 col-md-12 col-sm-12">
 	     				<div class="dui-on-mb-img">
 	     					<img src="img/chargeddui.png">
-	     					<h2>Charged with a DUI? Your first call should be DUI<span style="color: red;">GUYS</span>FLA</h2>
+	     					<h2>Charged with a DUI? Your first call should be DUI<span class="logo-red-color">GUYS</span>FLA</h2>
 	     					<ul>
 	     						<li><img src="img/tick.png">Case Evaluations are FREE and you are under no obligation to hire the firm.</li>
 	     						<li><img src="img/tick.png">Vigorously defend you, and will not back down.</li>
@@ -334,7 +335,7 @@
 	    		<div class="row">
 	    			<div class="col-lg-6 col-md-12 col-sm-12">
 			    		<div class="truck-and-vehicle-content">
-			    			<h2>Charged with a DUI?<br> Your first call should be DUIGUYSFLA</h2>
+			    			<h2>Charged with a DUI?<br> Your first call should be DUI<span class="logo-red-color">GUYS</span>FLA</h2>
 			    			<ul>
 			    				<li><img src="img/tick.png"> Case Evaluations are FREE and you are under no obligation to hire the firm.</li>
 			    				<li><img src="img/tick.png"> Vigorously defend you, and will not back down.</li>
@@ -365,7 +366,7 @@
 	      					<ul>
 	      						<li><img src="img/circletick.png">We are available 24/7 by phone to manage your case</li>
 	      						<li><img src="img/circletick.png">Highly respected reputation in our field of law</li>
-	      						<li><img src="img/circletick.png">Voted Top Lawyers in Canada </li>
+	      						<li><img src="img/circletick.png">Voted Top Lawyers in the state of Florida </li>
 	      					</ul>
 	      				</div>
 	      			</div>
