--- a/index.html
+++ b/index.html
@@ -52,12 +52,9 @@
 							<nav class="navbar navbar-expand-lg">
 		
 							    <a class="navbar-brand" href="index.html"><img src="img/logo.png"> </a>
+							    <button class="btn btn-secondary desktop-hide-consultant-button">Free Consultation</button>
 							    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"  onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))">
-							    	 <svg width="40" height="40" viewBox="0 0 100 100">
-								        <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-								        <path class="line line2" d="M 20,50 H 80" />
-								        <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
-								      </svg>
+							    	<img src="img/menu.png">
 							    </button>
 							    <div class="collapse navbar-collapse" id="navbarNav">
 							      <ul class="navbar-nav">
@@ -75,7 +72,7 @@
 							        </li>
 							      </ul>
 							    </div>
-							    <div class="header-right-button-text">
+							    <div class="header-right-button-text header-right-button-mb">
 							    	<ul>
 							    		<li><a href="#">SP</a></li>
 							    		<li><a href="#">
@@ -97,7 +94,8 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-12 col-sm-12 mx-auto d-block">
 						<div class="banner-content">
-							<h1>florida’s elite DUI defense network</h1>
+							<h1 class="banner-content-desktop-view">florida’s elite DUI defense network</h1>
+							<h1 class="banner-content-mb-view">The premier Team of<br> DUI Defense Attorneys</h1>
 							<p>Clayman. Schertzer. Ansara. Sessa.</p>
 							<h5>Trusted, battle-tested criminal defense attorneys, <br> committed to defend your future.</h5>
 							<button class="btn btn-secondary">Free DUI Case Evaluation <img src="img/newarrow.png"></button>
@@ -152,6 +150,41 @@
 			</div>
 		</section>
 		<!-- clients-detail -->
+
+		<!-- client-detail-mb -->
+		<section class="client-detail-mb">
+			<div class="client-detail-mb-main">
+				<div class="client-details-main image-one-design client-detail-mb-box">
+					<!-- <img src="img/clientimg.png"> -->
+					<div class="client-heading">
+						<h3>Richard Ansara</h3>
+						<p>Criminal Defense Attorney</p>
+					</div>
+				</div>
+				<div class="client-details-main image-two-design client-detail-mb-box">
+					<!-- <img src="img/clientimg1.png"> -->
+					<div class="client-heading">
+						<h3>Steven Sessa</h3>
+						<p>Criminal Defense Attorney</p>
+					</div>
+				</div>
+				<div class="client-details-main image-three-design client-detail-mb-box">
+					<!-- <img src="img/clientimg2.png"> -->
+					<div class="client-heading">
+						<h3>Andrew Schertzer</h3>
+						<p>Criminal Defense Attorney</p>
+					</div>
+				</div>
+				<div class="client-details-main image-four-design client-detail-mb-box">
+					<!-- <img src="img/clientimg2.png"> -->
+					<div class="client-heading">
+						<h3>Eric Clayman</h3>
+						<p>Criminal Defense Attorney</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- client-detail-mb -->
 
 		<!-- logos-slider -->
 		<section class="logo-slider">
@@ -290,7 +323,7 @@
 	        		<div class="col-lg-7 col-md-12 col-sm-12 mx-auto d-block">
 	        			<div class="logo-slider-heading customer-review-heading">
 							<img class="logo-left-vector" src="img/logovector.png">
-							<h2>Customer Reviews</h2>
+							<h2>Customer <br class="show-space-on-mb"> Reviews</h2>
 							<img class="logo-right-vector" src="img/logovectorR.png">
 						</div>
 	        		</div>
@@ -486,7 +519,7 @@
 	    			</div>
 	    			<div class="col-lg-6 col-md-12 col-sm-12">
 	    				<div class="affordable-content">
-	    					<h2>Affordable defense,<br> without the stress</h2>
+	    					<h2>Affordable defense,<br class="hide-space-on-mb"> without the stress</h2>
 	    					<p>We offer flexible payment plans and financing options - so you can focus on your case, not the cost. </p>
 	    					<button class="btn btn-secondary">See our plans <img src="img/newarrow.png"></button>
 	    				</div>
@@ -502,7 +535,7 @@
 	    		<h3>Start Your Free Case <br> Evaluation Now!</h3>
 	    		<p>Fill out the form below and one of our associates will get back to you shortly!</p>
 	    		<form>
-	    			<div class="row">
+	    			<div class="row mb-widt-design">
 					  <div class="col">
 					    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
 					  </div>
@@ -510,7 +543,7 @@
 					    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
 					  </div>
 					</div>
-					<div class="row">
+					<div class="row mb-widt-design">
 					  <div class="col">
 					    <input type="Phone" class="form-control" placeholder="Phone" aria-label="Phone">
 					  </div>
@@ -518,7 +551,7 @@
 					    <input type="text" class="form-control" placeholder="Email" aria-label="Email">
 					  </div>
 					</div>
-					<div class="row">
+					<div class="row mb-widt-design">
 					  <div class="col">
 					    <input type="text" class="form-control" placeholder="DUI (Driving) or BUI (Boating)" aria-label="DUI (Driving) or BUI (Boating)">
 					  </div>
@@ -629,18 +662,30 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
 <!-- testimonial slider -->
-<script >
-	$(document).ready(function(){
-  $(".owl-carousel").owlCarousel({
-      items:3,
-     autoplay:true,
-      margin:30,
-      loop:true,
-      dots:true
-//      nav:true,
-//      navText:["<i class='fas fa-long-arrow-alt-left'></i>","<i class='fas fa-long-arrow-alt-right'></i>" ]
+<script>
+  $(document).ready(function(){
+    $(".owl-carousel").owlCarousel({
+      items: 3, // Default: 3 items for larger screens
+      autoplay: true,
+      margin: 30,
+      loop: true,
+      dots: true,
+      responsive: {
+        // When the screen width is less than or equal to 768px (mobile view)
+        0: {
+          items: 1 // Show only 1 item on mobile
+        },
+        // When the screen width is between 769px and 1024px (tablet)
+        768: {
+          items: 2 // Show 2 items on tablets
+        },
+        // For larger screens (default settings)
+        1024: {
+          items: 3 // Show 3 items for larger screens
+        }
+      }
+    });
   });
-});
 </script>
 <!-- testimonial slider -->
 
